Add configuration for memory and permgen space.